@@ -9,6 +9,8 @@ xx/xx/2004 - 1.9.2-WIP
 	  endianness support on Cygwin.  (Yuval)
 	- ntfsclone --metadata also saves at least the first 8 KiB of the 
 	  $LogFile (Szaka)
+	- Fix incorrect getopt_long() usage: converted argv[optind-1] to optarg
+	  so utilities won't do bogus and unexpected things (Szaka)
 
 05/04/2004 - 1.9.1 - Make mkntfs create bootable volumes and fixes/updates.
 	- Update with SuSE 9.1 beta 1 versions of GNU build system.
